crates/macros/tests/fail/no-uninit/padding.rs
use macros::NoUninit;

#[derive(NoUninit)]
struct Foo {
    a: u8,
    b: u16,
}

fn main() {}
