crates/macros/tests/fail/no-uninit/padding.stderr
error[E0080]: evaluation of constant value failed
 --> $DIR/padding.rs:3:10
  |
3 | #[derive(NoUninit)]
  |          ^^^^^^^^ attempt to divide by zero
